--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
             "use": "@vercel/python",
             "config": {
                 "runtime": "python3.9",
-                "pip": ["pip", "install", "-r", "requirements.txt"]
+                "maxLambdaSize": "15mb"
             }
         }
     ],
