--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,24 @@
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/static/(.*)",
-            "destination": "/static/$1"
+            "src": "app.py",
+            "use": "@vercel/python",
+            "config": {
+                "runtime": "python3.9",
+                "maxLambdaSize": "15mb",
+                "installCommand": "python -m pip install -r requirements.txt"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
         },
         {
-            "source": "/(.*)",
-            "destination": "/app.py"
+            "src": "/(.*)",
+            "dest": "app.py"
         }
     ]
 }
