Update error handling and proxy configuration

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ MYSQL_USER=your-mysql-user
 MYSQL_PASSWORD=your-mysql-password
 MYSQL_DB=fortune_telling
 OPENAI_API_KEY=your-openai-key
-CLAUDE_API_KEY=your-claude-key 
+CLAUDE_API_KEY=your-claude-key
+FLASK_ENV=production
+HTTP_PROXY=http://127.0.0.1:7890  # 仅开发环境使用 
