Update environment variables and session key handling

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ MYSQL_DB=fortune_telling
 OPENAI_API_KEY=your-openai-key
 CLAUDE_API_KEY=your-claude-key
 FLASK_ENV=production
+FLASK_SECRET_KEY=your-secret-key-here
 HTTP_PROXY=http://127.0.0.1:7890  # 仅开发环境使用 
