Reduce to minimal Flask app

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,1 @@
-SECRET_KEY=your-secret-key
-MYSQL_HOST=localhost
-MYSQL_USER=your-mysql-user
-MYSQL_PASSWORD=your-mysql-password
-MYSQL_DB=fortune_telling
-OPENAI_API_KEY=your-openai-key
-CLAUDE_API_KEY=your-claude-key
-FLASK_ENV=production
-FLASK_SECRET_KEY=your-secret-key-here
-HTTP_PROXY=http://127.0.0.1:7890  # 仅开发环境使用 
+# 暂时不需要环境变量 
