--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,15 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "api/index.py"
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/result",
+            "dest": "/api/index.py"
         },
         {
             "src": "/(.*)",
-            "dest": "api/index.py"
+            "dest": "/api/index.py"
         }
     ]
 }
