--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,10 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python",
-            "config": { 
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
-            }
+            "use": "@vercel/python"
         }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/api/index.py"
-        },
-        {
-            "src": "/result",
-            "dest": "/api/index.py"
-        },
         {
             "src": "/(.*)",
             "dest": "/api/index.py"
