--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,19 @@
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/analyze",
+            "methods": ["POST"],
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/result",
+            "dest": "/api/index.py"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
