--- a/vercel.json
+++ b/vercel.json
@@ -9,20 +9,17 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/api/index.py"
-        },
-        {
-            "src": "/analyze",
-            "methods": ["POST"],
-            "dest": "/api/index.py"
-        },
-        {
-            "src": "/result",
-            "dest": "/api/index.py"
+            "dest": "/$1"
         },
         {
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
-    ]
+    ],
+    "functions": {
+        "api/index.py": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 }
