--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,25 @@
         {
             "src": "api/index.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/$1"
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/result",
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/analyze",
+            "methods": ["POST"],
+            "dest": "/api/index.py"
         },
         {
             "src": "/(.*)",
