Update Vercel configuration with build settings

--- a/vercel.json
+++ b/vercel.json
@@ -34,5 +34,10 @@
             "memory": 1024,
             "maxDuration": 10
         }
+    },
+    "build": {
+        "env": {
+            "PYTHON_VERSION": "3.9"
+        }
     }
 }
