--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9",
+                "buildCommand": "python -V"
+            }
         },
         {
             "src": "static/**",
@@ -28,17 +33,5 @@
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
-    ],
-    "functions": {
-        "api/index.py": {
-            "memory": 1024,
-            "maxDuration": 10
-        }
-    },
-    "build": {
-        "env": {
-            "PYTHON_VERSION": "3.9",
-            "VERCEL_FORCE_DEPLOY": "1"
-        }
-    }
+    ]
 }
