--- a/vercel.json
+++ b/vercel.json
@@ -33,5 +33,9 @@
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
-    ]
+    ],
+    "github": {
+        "silent": true,
+        "autoJobCancelation": true
+    }
 }
