--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,7 @@
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.9",
-                "buildCommand": "python -V"
+                "runtime": "python3.9"
             }
         },
         {
@@ -26,7 +25,7 @@
         },
         {
             "src": "/analyze",
-            "methods": ["POST"],
+            "methods": ["POST", "OPTIONS"],
             "dest": "/api/index.py"
         },
         {
@@ -34,8 +33,9 @@
             "dest": "/api/index.py"
         }
     ],
+    "regions": ["hkg1"],
     "github": {
         "silent": true,
-        "autoJobCancelation": true
+        "enabled": true
     }
 }
